# ancient-code

./: .gitignore  index.html  silly_c.c  wolfies.lisp
cannibals/: .emacs.desktop  Makefile  cannibals  main.c  only_answer  only_answer-nums  rules.c  rules.plain  rules2.c  sstack.c  sstack.h  t.c
cdp/: index.html
cdp/cdp-1.0/: Makefile  README  TODO  cdp.lsm  main.c
datamax/: LABELS-1  PRINTLAB.BAS  Print One Label.BAT  Print Two Labels.BAT  Restore Last Label Batch.BAT  index.html
dinero-0.1.2/: COPYING  Makefile.in  README  TODO  account.c  account.h  configure  configure.in  dinero.c  dinero.h  io.c  io.h  main.c  session.c  session.h
graphics/: .emacs.desktop  Makefile  graphics  graphics1  main.c  main.c.bak  timer.c  timer.h
graphics/.xvpics/: blue-ball.xpm  blue-ball1.xpm  blue-ball2.xpm  blue-ball3.xpm  green-ball.xpm  green-ball2.xpm  plain-blue-ball.xpm  purple-ball2.xpm  red-ball.xpm  red-ball2.xpm  yellow-ball.xpm
graphics/balls/: blue-ball.xpm  green-ball.xpm  icon-face.xpm  purple-ball.xpm  red-ball.xpm  yellow-ball.xpm
graphics/balls1/: ball-mask.xbm  blue-ball-small.xpm  blue-ball.xpm  green-ball.xpm  purple-ball.xpm  red-ball.xpm  yellow-ball.xpm
graphics/balls3/: blue-ball.xpm  green-ball.xpm  pink-ball.xpm  purple-ball.xpm  red-ball.xpm  world.gimp  yellow-ball.xpm
lisp/: 15000  fact_of_5000  funcs.lisp  lisp_factorial.fas  lisp_factorial.lisp  lisp_modulus  lispinit.mem  new.lisp  program.lisp  scheme_factorial  scheme_modulus  sqrt.lisp
lisp/cdp.bak/: .emacs.desktop  Makefile  cdp-actions.lisp  cdp.lisp  lcdp  linux_cdrom.c  (+1 more)
(+38 files in other folders)
