dnl  This file is part of Dinero (Dinero Is Not Exactly Really Organized)
dnl  Copyright (C) 2001 by Josiah Israel Barber
dnl
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl  You should have received a copy of the GNU General Public License
dnl  along with this program; if not, write to the Free Software
dnl  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
dnl
dnl
dnl  See file 'COPYING' for complete details.
dnl

AC_INIT(dinero.h)

AC_PROG_CC

AC_CHECK_LIB(ncurses, initscr, CURSES_LIB="-lncurses", CURSES_LIB="-lcurses")

AC_SUBST(CURSES_LIB)
AC_SUBST(CC)

AC_OUTPUT(Makefile)
